# klarient-listmonk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: bounces.py  campaigns.py  common.py  imports.py  lists.py  media.py  public.py  settings.example.json  subscribers.py  templates.py  transactional.py
src/listmonk/: __init__.py  client.py
src/listmonk/bounces/: __init__.py  models.py  requests.py  resources.py
src/listmonk/campaigns/: __init__.py  models.py  requests.py  resources.py  responses.py
src/listmonk/common/: __init__.py  enums.py  paging.py  responses.py
src/listmonk/imports/: __init__.py  models.py  requests.py  resources.py  responses.py
src/listmonk/lists/: __init__.py  models.py  requests.py  resources.py  responses.py
src/listmonk/media/: __init__.py  models.py  requests.py  resources.py  responses.py
src/listmonk/public/: __init__.py  requests.py  resources.py
src/listmonk/subscribers/: __init__.py  models.py  requests.py  resources.py  responses.py
src/listmonk/templates/: __init__.py  models.py  requests.py  resources.py  responses.py
src/listmonk/transactional/: __init__.py  requests.py  resources.py
tools/live_smoke/: README.md  mutation.py  read_only.py
